# spotic

./: Cargo.toml  README.md  RELEASES.md
.github/: demo.tape
.github/workflows/: release.yml
src/: args.rs  auth.rs  client.rs  main.rs  model.rs  ui.rs
