[package]
name = "spotic"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
dirs = "5.0.1"
inquire = "0.7.5"
rspotify = { version = "0.13.3", features = ["cli"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
