[package]
name = "spotic"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/GHaxZ/spotic/"
description = "Spotify CLI controller"
repository = "https://github.com/GHaxZ/spotic/"

[[bin]]
name = "sc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.89"
clap = "4.5.20"
const_format = "0.2.33"
dirs = "5.0.1"
inquire = "0.7.5"
open = "5.3.0"
openssl = { version = "*", features = ["vendored"] }
rspotify = { version = "0.13.3" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "GHaxZ/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to install an updater program
install-updater = false
